# JourneyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/bush/: BUSH.mtl
assets/shiba/: shiba.mtl
games/: CMakeLists.txt  catchGame.cpp  example1.cpp  littleDemo.cpp  simpleTest.cpp  testDemo.cpp
games/source/: CMakeLists.txt  example1.cpp
libs/: CMakeLists.txt
source/: CMakeLists.txt  JourneyEngine.hpp  application.cpp  application.hpp  engine.hpp
source/Input/: inputController.cpp  inputController.hpp  joystickCodes.hpp  keyCodes.hpp
source/audio/: audioBuffer.cpp  audioBuffer.hpp  audioManager.cpp  audioManager.hpp
source/camera/: camera.hpp  cameraHandler.hpp  debugCamera.cpp  debugCamera.hpp  followCamera.cpp  followCamera.hpp
source/component/: audioSource.cpp  audioSource.hpp  component.hpp  pointLight.cpp  pointLight.hpp  skeletalMesh.hpp  spotLight.cpp  spotLight.hpp  sprite.hpp  staticMesh.hpp  transform.cpp  transform.hpp
source/entity/: cameraHandler.hpp  entity.hpp  entityManager.cpp  entityManager.hpp  pointLight.hpp
source/entity/entities/: controlledEntity.cpp  controlledEntity.hpp
source/rendering/: bloom.cpp  bloom.hpp  importedModel.cpp  importedModel.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  meshGenerator.cpp  meshGenerator.hpp  meshManager.cpp  meshManager.hpp  model.cpp  model.hpp  renderManager.cpp  renderManager.hpp  skybox.cpp  skybox.hpp  textureManager.cpp  textureManager.hpp
source/rendering/shaders/: BloomFinalCalShader.fs  FlatColoredShader.fs  FlatColoredShader.vs  FlatTexturedShader.fs  FlatTexturedShader.vs  PhongTexturedShader.fs  PhongTexturedShader.vs  SimpleColoredShader.fs  SimpleColoredShader.vs  SimpleTexturedShader.fs  SkeletalTexturesShader.fs  phongColoredShader.fs  shader.cpp  shader.h  shader.hpp
source/scene/: scene.cpp  scene.hpp
source/skeletal/: animation.cpp  animation.hpp  animator.cpp  animator.hpp  animdata.hpp  assimp_glm_helpers.hpp  bone.cpp  bone.hpp  skeletalManager.cpp  skeletalManager.hpp  skeletalMesh.cpp  skeletalMesh.hpp  skeletalModel.cpp  skeletalModel.hpp
source/source/Core/: RootDirectory.hpp
source/window/: window.cpp  window.hpp
